# vita-newlib-shims

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: check.yml  ci.yml
crates/vita-newlib-shims/: Cargo.toml  README.md
crates/vita-newlib-shims/src/: lib.rs
crates/vita-system-alloc-wrapper/: Cargo.toml  README.md
crates/vita-system-alloc-wrapper/src/: lib.rs
examples/: .gitignore  Cargo.toml  Makefile.toml  Makefile.vita.toml  README.md
examples/0-std-tests/: Cargo.toml  Makefile.toml
examples/0-std-tests/src/: lib.rs  main.rs  tests_fs.rs  tests_pthread.rs  tests_tcp.rs  tests_unwind.rs
examples/1-cross-isa/: Cargo.toml  Makefile.toml
examples/1-cross-isa/src/: main.rs
examples/1-hello-world/: Cargo.toml  Makefile.toml
examples/1-hello-world/src/: main.rs
examples/2-http-client/: Cargo.toml
examples/2-http-client/src/: main.rs
src/: lib.rs
