[package]
name = "vita-newlib-shims"
version = "0.3.1"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Shims for libc functions not provided by Vita SDK newlib"
homepage = "https://github.com/vita-rust/vita-newlib-shims"
repository = "https://github.com/vita-rust/vita-newlib-shims"

authors = ["vita-sdk", "Nikolay Arhipov <n@arhipov.net>"]
keywords = ["vitasdk", "psvita", "vita", "homebrew", "shim"]

[features]
pipe2 = []
socketpair = []
fcntl = []

[dependencies]
libc = "0.2.149"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "armv7-sony-vita-newlibeabihf"
targets = []
cargo-args = ["-Z", "build-std"]
