[workspace]
members = ["./*"]
exclude = ["target", ".cargo"]
resolver = "2"

[profile.release]
panic = 'unwind'
lto = true

[patch.crates-io]
mio = { git = "https://github.com/vita-rust/mio", branch = "vita" }
tokio = { git = "https://github.com/vita-rust/tokio", branch = "vita" }
libc = { git = "https://github.com/pheki/libc", branch = "add-vita-definitions" }
ring = { git = "https://github.com/vita-rust/ring", branch = "v0.16.20-vita" }
socket2053 = { git = "https://github.com/vita-rust/socket2", branch = "v0.5.3-vita", package = "socket2", version = "0.5.3" }
socket2049 = { git = "https://github.com/vita-rust/socket2", branch = "v0.4.9-vita", package = "socket2", version = "0.4.9" }
