[package]
name = "vita-newlib-shims"
version = "0.2.1"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Shims for libc functions not provided by Vita SDK newlib"
homepage = "https://github.com/vita-rust/std/tree/main/crates/vita-newlib-shims"
repository = "https://github.com/vita-rust/std"

authors = ["vita-sdk", "Nikolay Arhipov <n@arhipov.net>"]
keywords = ["vita", "homebrew"]

[features]
default = ["socketpair", "pipe2"]
pipe2 = []
socketpair = []

[dependencies]
libc = "0.2.148"
