[package]
name = "vita-system-alloc-wrapper"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "A proxy for std::alloc::System which wraps dealloc in std::hint::black_box"
homepage = "https://github.com/vita-rust/std-newlib/tree/main/crates/vita-system-alloc-wrapper"
repository = "https://github.com/vita-rust/std-newlib"

[dependencies]
libc = "0.2.144"