[package]
name = "vita-example-http"
version = "0.1.0"
edition = "2021"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
openssl = ["reqwest/native-tls"]

[dependencies]
anyhow = "1.0"
vita-newlib-shims = "0.2.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["macros", "rt", "net"] }
oxhttp = { version = "0.1.7" }
ureq = { version = "2.7.1", default-features = false, features = ["gzip"] }

[package.metadata.vita]
title_id = "RUSTTEST2"
title_name = "Rust http test"

# This disables safe mode (default -s flag) for reading openssl certs
vita_make_fself_flags = []
